@@ -469,6 +469,17 @@ webui.ldap.autoregister = true
 #ldap.netid_email_domain = @example.com
 
 
+#### Restricted item visibilty settings ###
+# By default RSS feeds, OAI-PMH and subscription emails will include ALL items
+# regardless of permissions set on them.
+#
+# If you wish to only expose items through these channels where the ANONYMOUS
+# user is granted READ permission, then set the following options to false
+#harvest.includerestricted.rss = true
+#harvest.includerestricted.oai = true
+#harvest.includerestricted.subscription = true
+
+
 #### Proxy Settings ######
 # uncomment and specify both properties if proxy server required
 # proxy server for external http requests - use regular hostname without port number
